[package]
name = "v9"
version = "0.1.46"
authors = ["neptunepink <purpleposeidon@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/purpleposeidon/v9"
description = "A slim data engine for Data Oriented Design"

[workspace]
members = [ "v9-attr" ]

[dependencies]
#slice-deque = "0.1.16"
smallvec = { version = "0.6", features = ["serde"] }
paste = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
v9-attr = { path = "./v9-attr", version = "0.1.0" }
bincode = { git = "https://github.com/bincode-org/bincode", default-features = false, features = ["std", "alloc", "derive"], optional = true }
ezty = "0.1"

[dev-dependencies]
rand = "0.7"
serde_json = "1.0"

[features]
move_event = []
