[package]
name = "v9"
version = "0.1.50"
authors = ["neptunepink <purpleposeidon@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/purpleposeidon/v9"
description = "A slim data engine for Data Oriented Design"

[workspace]
members = [ "v9-attr" ]

[dependencies]
#slice-deque = "0.1.16"
v9-attr = { path = "./v9-attr", version = "0.1.0" }
paste = "1.0"
ezty = "0.1"
smallvec = { version = "0.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { git = "https://github.com/bincode-org/bincode", rev = "6c219e9214bda2bdce1327db6ed7f66d2fa4bf02", default-features = false, features = ["std", "alloc", "derive"], optional = true }


[dev-dependencies]
rand = "0.7"
serde_json = "1.0"

[features]
move_event = []
